...
    <string name="invalid_name_division">Division name can only contain letters and numbers</string>
    <string name="invalid_name_house">House name can only contain letters and numbers</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_ip">Invalid IP</string>
    <string name="email_not_registered">Email not registered</string>

    <string name="please_wait">Please wait ...</string>

    <string name="error_accessing_sensor">Unable to connect with sensor</string>

    <string name="Plug">Plugs</string>
    <string name="Light">Lights</string>
    <string name="Blinds">Blinds</string>
...
